<resources>
    <string name="action_settings">Settings</string>
    <string name="single_permission_text">(Click on FAB to check Single permission.\nTo test again, change the app permission in settings or reinstall the app)</string>
    <string name="app_name">Society Managements</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="register">Register</string>
    <string name="re_enter_your_password">Re-enter Your Password</string>
    <string name="create_new_user">Create New User</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="forgot_send">Send</string>
    <string name="enter_description">Enter Description</string>
    <string name="pubg">PUBG</string>
    <string name="counter_strike">Counter-Strike</string>
    <string name="select_game_type">Select Game Type</string>
    <string name="enter_password_for_game">Enter password for game</string>
    <string name="create_game">Create Game</string>
    <string name="enter_id_for_game">Enter id for Game</string>
    <string name="select_game">Select Game:</string>
    <string name="price">Price</string>
    <string name="enter_nor_player">Enter Nor player</string>
    <string name="game_title">Game Title</string>
    <string name="username">Game Host id</string>
    <string name="game_end_date">Game End Date</string>
    <string name="game_start_date">Game start Date</string>

</resources>
